--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.3
 django-heroku==0.3.1
 django-registration==3.1.2
 django-storages==1.11.1
+gunicorn==20.1.0
 jmespath==0.10.0
 Pillow==8.2.0
 psycopg2==2.8.6
